updated about page

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,30 +1,50 @@
 <section id="about" class="">
   <div class="copy row flex no-gutters">
     <div class="copy-body d-flex col-10 col-md-6">
-      <img class="avatar-image d-none d-md-block" src="../../assets/profile-pic2.jpg" />
+      <img
+        class="avatar-image d-none d-md-block"
+        src="../../assets/profile-pic2.jpg"
+      />
       <div class="copy-body">
-
         <h1>Spencer Dixon</h1>
         <p>
-          My love affair with the internet began after my family ditched aol internet discs and got dial-up. Back then I was addicted to the internet because of MSN messenger... now I'm addicted because it's my job. Also for the memes.
+          My love affair with the internet began after my family ditched aol
+          internet discs and got dial-up. Back then I was addicted to the
+          internet because of MSN messenger... now I'm addicted because it's my
+          job. Also for the memes.
         </p>
         <hr />
         <div class="btn-group">
-          <a href="assets/downloads/20-resume.pdf" download target="_blank" class="btn btn-primary"><i class="fas fa-file-download"></i>Resumé</a>
-          <a href="assets/downloads/20-CL.pdf" download target="_blank" class="btn btn-secondary"><i class="fas fa-file-download"></i>Cover Letter</a>
-          <a href="https://instagram.com/doggosbeingdoggos/" target="_blank" class="btn btn-secondary d-none d-md-block"><i class="fas fa-dog"></i>Dog Memes</a>
+          <a
+            href="assets/downloads/20-resume.pdf"
+            download
+            target="_blank"
+            class="btn btn-primary"
+            ><i class="fas fa-file-download"></i>Resumé</a
+          >
+          <a
+            href="assets/downloads/20-CL.pdf"
+            download
+            target="_blank"
+            class="btn btn-secondary"
+            ><i class="fas fa-file-download"></i>Cover Letter</a
+          >
+          <a
+            href="https://instagram.com/doggosbeingdoggos/"
+            target="_blank"
+            class="btn btn-secondary d-none d-md-block"
+            ><i class="fas fa-dog"></i>Dog Memes</a
+          >
         </div>
       </div>
     </div>
   </div>
   <div class="resume row flex no-gutters" id="resume">
     <div class="career-path col-10 col-lg-6 offset-1">
-
-      <div class="resume-item ">
+      <div class="resume-item">
         <h2 class="job-title">UX/UI Designer</h2>
         <div class="job-subTitle">Weave | 2020 – Present</div>
         <div class="job-description">
-
           <div class="tools">
             Using these tools:
             <ul>
@@ -32,12 +52,13 @@
               <li class="partial">Gatsby</li>
               <li>HTML5 / CSS3</li>
               <li>Git</li>
-              <li class="partial">Google Analytics</li>
+              <li class="partial">React</li>
+              <li>Advanced Google Analytics</li>
               <li class="partial">VWO</li>
-              <li>Adobe CC (XD, AI, PS, PR)</li>
+              <li class="partial">Reactful</li>
+              <li>Adobe CC (XD, AI, PS, AN)</li>
               <li class="partial">Headless Wordpress</li>
               <li class="partial">Tiled</li>
-              <li class="partial">Headless Wordpress</li>
             </ul>
           </div>
         </div>
@@ -47,8 +68,10 @@
         <h2 class="job-title">Interactive Experience Designer</h2>
         <div class="job-subTitle">Expertvoice | 2015 – 2020</div>
         <div class="job-description">
-          Working as part of a design team to accomplish goals of the client but also of the in-house agency. Handling many concurrent, high profile projects. Design, user testing, development (coding) and presentation of web components and digital
-          experiences.
+          Working as part of a design team to accomplish goals of the client but
+          also of the in-house agency. Handling many concurrent, high profile
+          projects. Design, user testing, development (coding) and presentation
+          of web components and digital experiences.
           <div class="tools">
             <ul>
               <li>Jira</li>
@@ -63,7 +86,10 @@
               <li>Proprietary CMS / LMS</li>
               <li class="partial">Wordpress</li>
               <li class="partial">Figma</li>
-              <li>Good managers and a tight-knit team make an otherwise unfulfilling job, worth sticking with.</li>
+              <li>
+                Good managers and a tight-knit team make an otherwise
+                unfulfilling job, worth sticking with.
+              </li>
             </ul>
           </div>
         </div>
@@ -71,10 +97,17 @@
 
       <div class="resume-item past">
         <h2 class="job-title">UX/UI Developer</h2>
-        <div class="job-subTitle">thecampus.market | 2018 – 2020 (shut-down)</div>
+        <div class="job-subTitle">
+          thecampus.market | 2018 – 2020 (shut-down)
+        </div>
         <div class="job-description">
-          My friends and I created a service that allows students to buy and sell housing contracts on a private marketplace. It started as an excuse to hang out and has turned into something that a decent amount of people use. I have handled all of
-          the design, except for the terrible logo, and all of the UI engineering. We succeeded too, we won a few hackathons/pitch competitions, ultimately though, we couldnt drive traffic to the site with competitors like KSL classifieds and
+          My friends and I created a service that allows students to buy and
+          sell housing contracts on a private marketplace. It started as an
+          excuse to hang out and has turned into something that a decent amount
+          of people use. I have handled all of the design, except for the
+          terrible logo, and all of the UI engineering. We succeeded too, we won
+          a few hackathons/pitch competitions, ultimately though, we couldnt
+          drive traffic to the site with competitors like KSL classifieds and
           facebook marketplace.
           <div class="tools">
             <ul>
@@ -83,7 +116,10 @@
               <li>Adobe XD</li>
               <li>Git</li>
               <li>Laughter while working does not make the work any easier</li>
-              <li>The answer to Provo's housing crisis is not another hyper-specific, exclusive web-app</li>
+              <li>
+                The answer to Provo's housing crisis is not another
+                hyper-specific, exclusive web-app
+              </li>
             </ul>
           </div>
         </div>
@@ -91,10 +127,17 @@
 
       <div class="resume-item past">
         <h2 class="job-title">Web Content Publisher</h2>
-        <div class="job-subTitle">The Church of Jesus Christ of Latter-Day Saints | 2014 – 2015 (Internship)</div>
+        <div class="job-subTitle">
+          The Church of Jesus Christ of Latter-Day Saints | 2014 – 2015
+          (Internship)
+        </div>
         <div class="job-description">
-          I was employed as part of the web content services team, put in charge of publishing web content, managing site layout & design. I even did a little bit of SEO and evaluated page performance using the churches proprietary CMS, and then a
-          little bit of Adobe Experience Manager. In addition to implementing updates and performing maintenance on all of the Family History sub-pages on LDS.org
+          I was employed as part of the web content services team, put in charge
+          of publishing web content, managing site layout & design. I even did a
+          little bit of SEO and evaluated page performance using the churches
+          proprietary CMS, and then a little bit of Adobe Experience Manager. In
+          addition to implementing updates and performing maintenance on all of
+          the Family History sub-pages on LDS.org
           <div class="tools">
             <ul>
               <li>HTML/CSS</li>
@@ -110,8 +153,10 @@
         <h2 class="job-title">Design Consultant</h2>
         <div class="job-subTitle">Various Clients | 2013 – 2018</div>
         <div class="job-description">
-          Working solo for clients like Artemis Health, CityGro, PrimeAV and many others. User testing, creating mocks, designing interactions, coding websites and portals, and marketing landing pages, and whatever else I wanted to do instead of
-          have a life outside of work.
+          Working solo for clients like Artemis Health, CityGro, PrimeAV and
+          many others. User testing, creating mocks, designing interactions,
+          coding websites and portals, and marketing landing pages, and whatever
+          else I wanted to do instead of have a life outside of work.
           <div class="tools">
             <ul>
               <li>HTML/CSS</li>
@@ -119,7 +164,10 @@
               <li>Sketch</li>
               <li>Photoshop</li>
               <li>Illustrator</li>
-              <li>When it rains consultant work it pours, and you will burn out fast trying to work for everyone.</li>
+              <li>
+                When it rains consultant work it pours, and you will burn out
+                fast trying to work for everyone.
+              </li>
             </ul>
           </div>
         </div>
@@ -129,9 +177,16 @@
         <h2 class="job-title">Shift Manager</h2>
         <div class="job-subTitle">Top Hat Video | 2011 – Present</div>
         <div class="job-description">
-          A physical video rental store, like blockbuster, but with 25,000 different movies. Old movies and formats meet new movies and formats, games and TV shows, all together under one roof. This was my first (real/retail) job, I've tried to quit
-          three separate times. Two months after each attempt I wind up depressed and back on the schedule. It's a small family operation, technically not <em>my</em> family, but I'd claim them. If you're thinking – no this can't be, redbox killed
-          them all, and then netflix robbed their graves – you're wrong. We have survived in large part due to our loyal community, our outstanding customer service, and our always-go-the-extra-mile employees.
+          A physical video rental store, like blockbuster, but with 25,000
+          different movies. Old movies and formats meet new movies and formats,
+          games and TV shows, all together under one roof. This was my first
+          (real/retail) job, I've tried to quit three separate times. Two months
+          after each attempt I wind up depressed and back on the schedule. It's
+          a small family operation, technically not <em>my</em> family, but I'd
+          claim them. If you're thinking – no this can't be, redbox killed them
+          all, and then netflix robbed their graves – you're wrong. We have
+          survived in large part due to our loyal community, our outstanding
+          customer service, and our always-go-the-extra-mile employees.
           <div class="tools">
             <ul>
               <li class="partial">Wordpress</li>
@@ -148,7 +203,10 @@
         <h2 class="job-title">Newspaper Delivery Boy</h2>
         <div class="job-subTitle">Bountiful Clipper | 2007 – 2011</div>
         <div class="job-description">
-          This is the job I am most proud of. How many people do you know that stuck with a newspaper delivery job for 4 years? This job taught me the value of hard work, and gave me an undying hatred for printed advertisements.
+          This is the job I am most proud of. How many people do you know that
+          stuck with a newspaper delivery job for 4 years? This job taught me
+          the value of hard work, and gave me an undying hatred for printed
+          advertisements.
           <div class="tools">
             <ul>
               <li>Hard Work</li>
@@ -157,24 +215,19 @@
           </div>
         </div>
       </div>
-
     </div>
     <div class="skills d-none d-lg-block col-lg-3 offset-lg-1">
       <h5>Skills Search</h5>
       <div id="wordSearch">
         <span class="character-holder">
-          TEAMBUILDINGrjlsktPz
-          jHwaoiSOCCERtqCfrwIu
-          uTqPxqjhLEADERSHIPNa
-          yMgxmrrepoqsoeSprwGp
-          lLANGULARrspgrajnyPo
-          fiksrsJAVASCRIPTreOr
-          wddkvyjrivfzxkjgeiNb
-          ugztrPROBLEMSOLVINGv
+          TEAMBUILDINGrjlsktPz jHwaoiSOCCERtqCfrwIu uTqPxqjhLEADERSHIPNa
+          yMgxmrrepoqsoeSprwGp lLANGULARrspgrajnyPo fiksrsJAVASCRIPTreOr
+          wddkvyjrivfzxkjgeiNb ugztrPROBLEMSOLVINGv
         </span>
       </div>
       <div class="wordsearch-key">
-        <b>ANSWER KEY:</b> HTML, CSS, Javascript, Angular, Jquery, Design, Problem Solving, Teambuilding, Leadership, Soccer, Ping Pong
+        <b>ANSWER KEY:</b> HTML, CSS, Javascript, Angular, Jquery, Design,
+        Problem Solving, Teambuilding, Leadership, Soccer, Ping Pong
       </div>
     </div>
   </div>
