buncha minor fixes and updates

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -11,30 +11,24 @@
           My love affair with the internet began after my family ditched aol
           internet discs and got dial-up. Back then I was addicted to the
           internet because of MSN messenger... now I'm addicted because it's my
-          job. Also for the memes.
+          job.
         </p>
         <hr />
         <div class="btn-group">
           <a
-            href="assets/downloads/20-resume.pdf"
+            href="assets/downloads/resume-22.pdf"
             download
             target="_blank"
             class="btn btn-primary"
             ><i class="fas fa-file-download"></i>Resumé</a
           >
-          <a
+          <!-- <a
             href="assets/downloads/20-CL.pdf"
             download
             target="_blank"
             class="btn btn-secondary"
             ><i class="fas fa-file-download"></i>Cover Letter</a
-          >
-          <a
-            href="https://instagram.com/doggosbeingdoggos/"
-            target="_blank"
-            class="btn btn-secondary d-none d-md-block"
-            ><i class="fas fa-dog"></i>Dog Memes</a
-          >
+          > -->
         </div>
       </div>
     </div>
@@ -42,23 +36,54 @@
   <div class="resume row flex no-gutters" id="resume">
     <div class="career-path col-10 col-lg-6 offset-1">
       <div class="resume-item">
-        <h2 class="job-title">UX/UI Designer</h2>
+        <h2 class="job-title">Sr. UX/UI Designer</h2>
         <div class="job-subTitle">Weave | 2020 – Present</div>
         <div class="job-description">
           <div class="tools">
             Using these tools:
             <ul>
               <li>Asana</li>
-              <li class="partial">Gatsby</li>
               <li>HTML5 / CSS3</li>
-              <li>Git</li>
               <li class="partial">React</li>
+              <li>Git</li>
               <li>Advanced Google Analytics</li>
-              <li class="partial">VWO</li>
-              <li class="partial">Reactful</li>
+              <li class="partial">Google Optimize</li>
+              <li class="partial">Gatsby</li>
+              <li>VWO</li>
+              <li>Reactful</li>
+              <li class="partial">Figma</li>
               <li>Adobe CC (XD, AI, PS, AN)</li>
               <li class="partial">Headless Wordpress</li>
+              <li class="partial">Webflow</li>
               <li class="partial">Tiled</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="resume-item">
+        <h2 class="job-title">Design Lead</h2>
+        <div class="job-subTitle">RentSoft | 2020 – Present</div>
+        <div class="job-description">
+          During the Covid-19 lockdown I was looking for something to stay sane.
+          I convinced my friends to help me develop software to manage all the
+          rental inventory of the video store I work at one saturday a month
+          (see below). I managed the client expectation, acted as the project
+          manager and subject matter expert, and also lead efforts prototyping,
+          ui engineering, user testing and training. I currently provide most of
+          the ongoing maintenance and feature development.
+          <div class="tools">
+            <ul>
+              <li>Angular</li>
+              <li>HTML5 / CSS3</li>
+              <li>Trello</li>
+              <li>Adobe XD</li>
+              <li class="partial">MySQL</li>
+              <li>Git</li>
+              <li>Contracts work only when they are enforced on both ends.</li>
+              <li>
+                I dont equal the typical user, even when I am an actual user.
+              </li>
             </ul>
           </div>
         </div>
@@ -111,7 +136,8 @@
           facebook marketplace.
           <div class="tools">
             <ul>
-              <li>Angular</li>
+              <li class="partial">Angular</li>
+              <li>HTML5 / CSS3</li>
               <li>Trello</li>
               <li>Adobe XD</li>
               <li>Git</li>
@@ -193,7 +219,10 @@
               <li>Movie recommendations</li>
               <li>Small talk</li>
               <li>Counting back change</li>
+              <li>Conflict resolution</li>
               <li>Customer service</li>
+              <li>Telephone calls</li>
+              <li>People (teenager) management</li>
             </ul>
           </div>
         </div>
