--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,7 +1,7 @@
 <section id="contact">
   <div class="copy row flex no-gutters">
     <div class="copy-body col-10 col-md-6">
-      <h1>I'm available</h1>
+      <h1>I'm (kinda) available</h1>
       <p>Let me know if you find yourself needing:</p>
       <ul>
         <li>A dog sitter</li>
@@ -10,7 +10,6 @@
         <li>Pro deals</li>
         <li>A friend</li>
         <li>A website</li>
-        <li>A cheap logo</li>
         <li>Someone to talk to about Game of Thrones</li>
         <li>UI feedback</li>
         <li>Speculative information about the next iPhone</li>
@@ -19,10 +18,32 @@
   </div>
   <div class="app-locations col-9 col-md-8">
     <!--<a class="squircle facebook" target="_blank" href="https://www.facebook.com/spennydix"><i class="fab fa-facebook-f"></i></a>-->
-    <a class="squircle instagram" target="_blank" href="http://instagram.com/spennydix"><i class="fab fa-instagram"></i></a>
-    <a class="squircle twitter" target="_blank" href="http://twitter.com/spennydix"><i class="fab fa-twitter"></i></a>
-    <a class="squircle linkedin" target="_blank" href="http://linkedin.com/in/spennydix"><i class="fab fa-linkedin"></i></a>
-    <a class="squircle dribbble" target="_blank" href="http://dribbble.com/spennydix"><i class="fab fa-dribbble"></i></a>
-    <a class="squircle email" target="_blank" href="mailto:me@sdixon.app"><i class="fas fa-envelope"></i></a>
+    <a
+      class="squircle instagram"
+      target="_blank"
+      href="http://instagram.com/spennydix"
+      ><i class="fab fa-instagram"></i
+    ></a>
+    <a
+      class="squircle twitter"
+      target="_blank"
+      href="http://twitter.com/spennydix"
+      ><i class="fab fa-twitter"></i
+    ></a>
+    <a
+      class="squircle linkedin"
+      target="_blank"
+      href="http://linkedin.com/in/spennydix"
+      ><i class="fab fa-linkedin"></i
+    ></a>
+    <a
+      class="squircle dribbble"
+      target="_blank"
+      href="http://dribbble.com/spennydix"
+      ><i class="fab fa-dribbble"></i
+    ></a>
+    <a class="squircle email" target="_blank" href="mailto:me@sdixon.app"
+      ><i class="fas fa-envelope"></i
+    ></a>
   </div>
 </section>
