--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -40,7 +40,12 @@
         <div class="job-subTitle">Weave | 2020 – Present</div>
         <div class="job-description">
           <div class="tools">
-            Using these tools:
+            I work as the only UX designer on a team of devs. I prototype,
+            design, test, and develop digital experiences on the consumer facing
+            website, the company intranet, and some one-off ipad apps. I
+            brainstorm large brand campaigns, fill designOps functions like
+            maintaing component libraries, dashboards, and spearhead a lot of
+            our creative process improvement.
             <ul>
               <li>Asana</li>
               <li>HTML5 / CSS3</li>
